--- a/fastBite-client/src/App.css
+++ b/fastBite-client/src/App.css
@@ -1,27 +1,57 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap'); /* Importa solo los pesos necesarios */
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap');
+/* Importa solo los pesos necesarios */
 
 body {
   font-family: "Poppins", system-ui;
 }
 
-header {
-  z-index: 10001 !important; /* Asegúrate de que este valor es necesario */
-}
-
-.section-container {
-  @apply max-w-screen-2xl container mx-auto xl:px-24 px-4;
+header,
+nav {
+  z-index: 10001 !important;
 }
 
 .subtitle {
-  @apply text-orange uppercase tracking-wide font-medium text-lg;
+  @apply text-red uppercase tracking-wide font-semibold text-lg;
 }
 
 .title {
-  @apply text-4xl md:text-5xl font-bold my-2 md:leading-snug leading-snug;
+  @apply text-4xl md:text-5xl md:leading-snug font-bold my-2;
+}
+
+.slick-slider {
+  /* background-color: aquamarine; */
+  /* padding-left: 30px; */
+  /* height: 480px !important; */
+}
+
+
+.slick-prev {
+  z-index: 1;
+  /* background-color: red !important; */
+}
+
+.slick-next {
+  z-index: 1;
+  /* background-color: red !important; */
+}
+
+.slick-dots li button:before {
+  color: rgb(179, 178, 178) !important;
+  font-size: 10px !important;
+  margin-top: 10px;
+}
+
+.slick-dots li.slick-active button:before {
+  color: white !important;
+  /* font-size: 12px !important; */
 }
 
 .heartStar {
   border-radius: 0px 28px 0px 28px;
+}
+
+.section-container {
+  @apply max-w-screen-2xl container mx-auto xl:px-24 px-4
 }
 
 .footer-title {
@@ -31,13 +61,25 @@ header {
 .active {
   text-decoration: underline;
   text-underline-offset: 5px;
-  color: orange;
+  color: #ff7f1c;
 }
 
-/* Eliminar las flechas de los inputs numéricos en navegadores WebKit */
-input::-webkit-outer-spin-button,
-input::-webkit-inner-spin-button {
+.loading-spinner {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  min-height: 100vh;
+  font-size: 1.5rem;
+  color: #fff;
+}
+
+input[type="number"]::-webkit-inner-spin-button,
+input[type="number"]::-webkit-outer-spin-button {
   -webkit-appearance: none;
   margin: 0;
 }
 
+input[type="number"] {
+  -moz-appearance: textfield;
+  appearance: textfield;
+}
